// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replay ADDED_TODO event can add todos as children of children 1`] = `
Array [
  Object {
    "children": Array [],
    "title": "Create a parent todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-3",
            "title": "Create a child todo of child of parent 2",
            "todoId": "id-5",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "parentId": "id-6",
                "title": "Create a child of 2nd child of child of parent 2",
                "todoId": "id-7",
              },
            ],
            "parentId": "id-3",
            "title": "Create a second child todo of child of parent 2",
            "todoId": "id-6",
          },
        ],
        "parentId": "id-2",
        "title": "Create a child in another parent todo",
        "todoId": "id-3",
      },
    ],
    "title": "Create another parent todo",
    "todoId": "id-2",
  },
  Object {
    "children": Array [],
    "title": "Create a third parent todo",
    "todoId": "id-4",
  },
]
`;

exports[`replay ADDED_TODO event can add todos in a more complex example 1`] = `
Array [
  Object {
    "children": Array [],
    "title": "Create a parent todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parentId": "id-2",
        "title": "Create a child in another parent todo",
        "todoId": "id-3",
      },
      Object {
        "children": Array [],
        "parentId": "id-2",
        "title": "Create another child todo in parent 2",
        "todoId": "id-5",
      },
    ],
    "title": "Create another parent todo",
    "todoId": "id-2",
  },
  Object {
    "children": Array [],
    "title": "Create a third parent todo",
    "todoId": "id-4",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can edit child todos 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Changed title of child",
        "todoId": "id-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can move from root scope 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-1-1-2",
          },
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-3",
          },
        ],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [],
    "title": "Added a child",
    "todoId": "id-2",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can move from root scope 2`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-1-1-2",
          },
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-3",
          },
        ],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [],
    "title": "Added a child",
    "todoId": "id-2",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can move from root to root scope 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-1-1-2",
          },
        ],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [],
    "title": "Added a child",
    "todoId": "id-2",
  },
  Object {
    "children": Array [],
    "title": "Created another todo",
    "todoId": "id-3",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can move into root scope 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-1-1-2",
          },
        ],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [],
    "title": "Added a child",
    "todoId": "id-2",
  },
  Object {
    "children": Array [],
    "title": "Added a child",
    "todoId": "id-1-1-1",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can move subtasks to other parents 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parentId": "id-2",
        "title": "Added a child",
        "todoId": "id-2-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-2",
        "title": "Added a child",
        "todoId": "id-1-1",
      },
    ],
    "title": "Added a child",
    "todoId": "id-2",
  },
]
`;

exports[`replay editing todos CHANGED_TODO can replay changes in a child 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "parentId": "a0ca6051-43f9-410e-86c9-75ae37a1c682",
      "title": "really really real",
      "todoId": "6505d361-adc2-427f-ad45-a4e57b630830",
    },
  ],
  "title": "do it",
  "todoId": "a0ca6051-43f9-410e-86c9-75ae37a1c682",
}
`;

exports[`replay editing todos CHANGED_TODO moves subtasks from subtasks to different parents in other trees 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-1",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-1-2",
            "title": "Added a child",
            "todoId": "id-1-2-1",
          },
        ],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-2-1",
            "title": "Added a child",
            "todoId": "id-1-2-2",
          },
        ],
        "parentId": "id-2",
        "title": "Added a child",
        "todoId": "id-2-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-2",
        "title": "Added a child",
        "todoId": "id-2-2",
      },
    ],
    "title": "Added a child",
    "todoId": "id-2",
  },
]
`;

exports[`replay editing todos CHANGED_TODO only edits the things provided in data and does not touch other fields 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Changed title of child but did not change parentId",
        "todoId": "id-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
]
`;

exports[`replay editing todos CHANGED_TODO will change the todos when the edit is done 1`] = `
Object {
  "children": Array [],
  "title": "Changed the todo",
  "todoId": "id-1",
}
`;

exports[`replay editing todos CHANGED_TODO works when moving a todo down 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-1-1-2",
          },
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-1-1-1",
          },
        ],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-2",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [],
    "title": "Added a child",
    "todoId": "id-2",
  },
]
`;

exports[`replay editing todos CHANGED_TODO works when moving a todo up 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "parentId": "id-1-1",
            "title": "Added a child",
            "todoId": "id-1-1-2",
          },
        ],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-1",
      },
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-2",
      },
      Object {
        "children": Array [],
        "parentId": "id-1",
        "title": "Added a child",
        "todoId": "id-1-1-1",
      },
    ],
    "title": "Create a todo",
    "todoId": "id-1",
  },
  Object {
    "children": Array [],
    "title": "Added a child",
    "todoId": "id-2",
  },
]
`;

exports[`replay editing todos EDITING_TODO does not care in the store about intermediate edits 1`] = `
Object {
  "children": Array [],
  "title": "Create a todo",
  "todoId": "id-1",
}
`;
